--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -118,3 +118,6 @@ jobs:
           filename=$(basename "$notebook" .py)
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
+    - name: Run Databricks Workflow
+      run: |
+        databricks jobs run-now --job-id 32558063500619
