--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,5 +15,4 @@ jobs:
 
       - name: List modified Python notebooks
         run: |
-          MODIFIED_NOTEBOOKS=git diff --name-only --diff-filter=ACMRTUXB $(git merge-base HEAD^ HEAD) HEAD notebooks/*.py
-          echo $MODIFIED_NOTEBOOKS
+          git diff --name-only --diff-filter=ACMRTUXB $(git merge-base HEAD^ HEAD) HEAD notebooks/*.py
