--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -117,12 +117,18 @@ jobs:
       run: |
         for notebook in $MODIFIED_NOTEBOOKS; do
           filename=$(basename "$notebook" .py)
+          echo "Importing notebook: $filename"
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
         # for notebook in ./notebooks/*.py; do
         #   filename=$(basename "$notebook" .py)
         #   databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         # done
-    - name: Run Databricks Workflow
-      run: |
-        databricks jobs run-now --job-id 32558063500619
+    # - name: Run Databricks Workflow
+    #   run: |
+    #     databricks jobs run-now --job-id 32558063500619
+
+
+
+
+
