--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -118,7 +118,7 @@ jobs:
         echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
     - name: Move notebooks to Databricks Workspace
       run: |
-        IFS=' ' read -r -a notebooks_array <<< "$MODIFIED_NOTEBOOKS"
+        IFS=$'\n' read -r -d '' -a notebooks_array <<< "$MODIFIED_NOTEBOOKS"$'\0'
         for notebook in "${notebooks_array[@]}"; do
           filename=$(basename "$notebook" .py)
           echo "Importing notebook: $filename"
