--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -116,17 +116,15 @@ jobs:
         MODIFIED_NOTEBOOKS=$(git diff --name-only --diff-filter=ACMRTUXB $(git merge-base HEAD^ HEAD) HEAD notebooks/*.py)
         echo "modified notebooks: $MODIFIED_NOTEBOOKS"
         echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
-    - name: Identify and Move notebooks to Databricks Workspace
+    - name: Move notebooks to Databricks Workspace
       run: |
-        if [ -n "$MODIFIED_NOTEBOOKS" ]; then
-          for notebook in $(echo "$MODIFIED_NOTEBOOKS" | tr ' ' '\n'); do
-            filename=$(basename "$notebook" .py)
-            echo "Importing notebook: $filename"
-            databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
-          done
-        else
-          echo "No notebooks were modified."
-        fi
+        echo "MODIFIED_NOTEBOOKS: $MODIFIED_NOTEBOOKS"  # Debug: Print the variable
+        for notebook in $(echo "$MODIFIED_NOTEBOOKS" | tr ' ' '\n'); do
+          echo "Processing notebook: $notebook"  # Debug: Print the current notebook
+          filename=$(basename "$notebook" .py)
+          echo "Importing notebook: $filename"
+          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
+        done
     # - name: Move notebooks to Databricks Workspace
     #   run: |
     #     for notebook in $MODIFIED_NOTEBOOKS; do
