--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -118,20 +118,12 @@ jobs:
         echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
     - name: Move notebooks to Databricks Workspace
       run: |
-        echo "MODIFIED_NOTEBOOKS: $MODIFIED_NOTEBOOKS"  # Debug: Print the variable
-        for notebook in $(echo "$MODIFIED_NOTEBOOKS" | tr ' ' '\n'); do
-          echo "Processing notebook: $notebook"  # Debug: Print the current notebook
+        for notebook in $MODIFIED_NOTEBOOKS; do
+          notebook="${notebook#notebooks/}"
           filename=$(basename "$notebook" .py)
           echo "Importing notebook: $filename"
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
-    # - name: Move notebooks to Databricks Workspace
-    #   run: |
-    #     for notebook in $MODIFIED_NOTEBOOKS; do
-    #       filename=$(basename "$notebook" .py)
-    #       echo "Importing notebook: $filename"
-    #       databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
-    #     done
         # for notebook in ./notebooks/*.py; do
         #   filename=$(basename "$notebook" .py)
         #   databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
