--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -118,19 +118,13 @@ jobs:
         echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
     - name: Move notebooks to Databricks Workspace
       run: |
-        IFS=$'\n' read -r -d '' -a notebooks_array <<< "$MODIFIED_NOTEBOOKS"$'\0'
-        for notebook in "${notebooks_array[@]}"; do
-          notebook="${notebook#notebooks/}"  # Strip "notebooks/" from the path
-          echo "Importing notebook: $notebook"
-          databricks workspace import --overwrite --format SOURCE --language PYTHON "notebooks/$notebook" "/Workspace/Shared/test-dbx-devops/$notebook"
+        for notebook in ./notebooks/*.py; do
+          filename=$(basename "$notebook" .py)
+          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
-        # for notebook in ./notebooks/*.py; do
-        #   filename=$(basename "$notebook" .py)
-        #   databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
-        # done
-    # - name: Run Databricks Workflow
-    #   run: |
-    #     databricks jobs run-now --job-id 32558063500619
+    - name: Run Databricks Workflow
+      run: |
+        databricks jobs run-now --job-id 32558063500619
 
 
 
