--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -118,13 +118,14 @@ jobs:
         echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
     - name: Move notebooks to Databricks Workspace
       run: |
+        echo "modified notebooks: $MODIFIED_NOTEBOOKS"
         for notebook in ./notebooks/*.py; do
           filename=$(basename "$notebook" .py)
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
-    - name: Run Databricks Workflow
-      run: |
-        databricks jobs run-now --job-id 32558063500619
+    # - name: Run Databricks Workflow
+    #   run: |
+    #     databricks jobs run-now --job-id 32558063500619
 
 
 
