--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -120,7 +120,7 @@ jobs:
       run: |
         for string in $MODIFIED_NOTEBOOKS; do
           echo "modified notebooks: $string"
-          stripped_string=$(echo "$string" | sed 's/\/notebooks\///')
+          stripped_string="${string#*/}"
           echo "$stripped_string" 
         done
         for notebook in ./notebooks/*.py; do
