--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -122,11 +122,13 @@ jobs:
           echo "modified notebooks: $string"
           stripped_string=${string#*notebooks/}
           echo "$stripped_string" 
-        done
-        for notebook in ./notebooks/*.py; do
-          filename=$(basename "$notebook" .py)
+          filename=$(basename "$stripped_string" .py)
           databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
         done
+        # for notebook in ./notebooks/*.py; do
+        #   filename=$(basename "$notebook" .py)
+        #   databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
+        # done
     # - name: Run Databricks Workflow
     #   run: |
     #     databricks jobs run-now --job-id 32558063500619
