--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -124,7 +124,7 @@ jobs:
           echo "$stripped_string" 
           filename=$(basename "$stripped_string" .py)
           echo "$filename" 
-          databricks workspace import --overwrite --format SOURCE --language PYTHON "$notebook" "/Workspace/Shared/test-dbx-devops/$filename"
+          databricks workspace import --overwrite --format SOURCE --language PYTHON "$stripped_string" "/Workspace/Shared/test-dbx-devops/$filename"
         done
         # for notebook in ./notebooks/*.py; do
         #   filename=$(basename "$notebook" .py)
