--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -125,4 +125,5 @@ jobs:
         done
     - name: Run Databricks Workflow
       run: |
+        echo "modified notebooks: $MODIFIED_NOTEBOOKS"
         databricks jobs run-now --job-id 32558063500619
