--- a/.github/workflows/code-scan-move-pl.yml
+++ b/.github/workflows/code-scan-move-pl.yml
@@ -113,8 +113,12 @@ jobs:
     - name: Identify modified Python notebooks
       run: |
         MODIFIED_NOTEBOOKS=$(git diff --name-only --diff-filter=ACMRTUXB $(git merge-base HEAD^ HEAD) HEAD notebooks/*.py)
+        # echo "modified notebooks: $MODIFIED_NOTEBOOKS"
+        # echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
         echo "modified notebooks: $MODIFIED_NOTEBOOKS"
-        echo "MODIFIED_NOTEBOOKS=$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
+        echo "MODIFIED_NOTEBOOKS<<EOF" >> $GITHUB_ENV
+        echo "$MODIFIED_NOTEBOOKS" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
     - name: Move notebooks to Databricks Workspace
       run: |
         for notebook in $MODIFIED_NOTEBOOKS; do
